--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             margin: auto;
             width: 100%;
         }
+        @media (max-width: 600px) {
+            body {
+                background-size: 200px 150px;
+            }
+            h2, nav ul li a {
+                font-size: 20px;
+            }
+        }
 
             /* Quando a tela for menor que 1.000px, a imagem de fundo some */
         @media (max-width: 1000px) {
