--- a/index.html
+++ b/index.html
@@ -58,23 +58,18 @@
                 margin: 5px 0;
             }
         }
-
-
         /* Ajustes para telas médias */
         @media (max-width: 768px) {
             body {
                 background-size: cover; /* Ajusta o tamanho da imagem */
             }
         }
-
         /* Ajustes para telas grandes */
         @media (max-width: 1024px) {
             .header {
                 height: 60px; /* Ajusta a altura do cabeçalho para telas grandes */
             }
-        }
-
-        
+        }   
         /*----------------------------------------------------------------------*/
         /* Estilo para o logo em telas maiores */
         .logo {
@@ -136,6 +131,9 @@
                 width: 100%;
                 font-size: 14px;
                 background-size: cover;
+            }
+            footer{
+                height: auto;
             }
 
             section, nav, header, footer {
